# DeveloppezUnePreuveDeConcept

./: .gitignore  LICENSE  README.md  neo.yml  pyproject.toml
rapport/: end.aux  previsionnel.aux  previsionnel.fdb_latexmk  previsionnel.fls
rapport/common/: background.tex  functions.tex  overrides.tex  packages.tex
rapport/final/: chapters.tex  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc  sources.bib  titlepage.tex
rapport/final/chapters/: algorithm.tex  conclusion.tex  context.tex  introduction.tex  resultats.tex
rapport/previsionnel/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  recherche.tex  sources.bib  titlepage.tex
src/dpc/: README.md  main.py  policy.py  trainer.py
src/dpc/collect/: buffer.py  collector.py  environment.py  state.py
src/dpc/distrib/: network.py  r2d2.py
src/dpc/other/: config.py  embedding_model.py  memory.py  model.py  train.py
src/dpc/policies/: dqn.py  drqn.py  ngu.py
src/dpc/utils/: encode.py  func.py
