[tool.poetry]
name = "dpc"
version = "0.1.0"
description = ""
authors = ["Alan Blanchet <alan@alan-blanchet.fr>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "dpc", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = { extras = [
    "classic-control",
    "box2d",
    "accept-rom-license",
    "atari",
], version = "^0.29.1" }
opencv-python = "^4.9.0.80"
random-word = "^1.0.11"
torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-2.0.1-cp311-none-macosx_11_0_arm64.whl", platform = "darwin" },
    { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl", platform = "linux" },
    { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-win_amd64.whl", platform = "win32" },
]
torchvision = [
    { url = "https://download.pytorch.org/whl/cpu/torchvision-0.15.2-cp311-cp311-macosx_11_0_arm64.whl", platform = "darwin" },
    { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-linux_x86_64.whl", platform = "linux" },
    { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-win_amd64.whl", platform = "win32" },
]
ale-py = "^0.8.1"
einops = "^0.7.0"
moviepy = "^1.0.3"
scikit-learn = "^1.4.0"
seaborn = "^0.13.1"
torchmetrics = "^1.2.1"
tqdm = "^4.66.1"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.15.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
